packages/typ/tests/fixtures/diagnostics/0093_core_if_branch_mismatch_08.ml
let _ = if false then 7 else false
